# project-34-qeynet-inc-t

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deliverables/D1/: planning.md
deliverables/D1/mockups/: Mockups.txt
deliverables/D2/: deliverable-2.md  deliverable-2.txt
deliverables/team/: Stakeholders.txt  Team-34-Astra.csv
deliverables/team/minutes/: Minutes.txt
example-files/: DF71ZLMI9W_2023-10-11_15-30-00.yaml  DF71ZLMI9W_2023-10-11_15-45-00.h5  SCWT4IWH86.yaml  monad-telem.h5
src/: astra.db  main.py
src/astra/data/: alarm_container.py  alarms.py  config_manager.py  data_manager.py  datatable.py  dict_parsing.py  export_manager.py  parameters.py  telemetry_data.py  telemetry_manager.py  telemetry_reader.py
src/astra/example-config-files/: DF71ZLMI9W.yaml  monad.yaml
src/astra/example-files/: DF71ZLMI9W_2023-10-11_15-35-00.h5  SCWT4IWH86_2023-11-01_15-00-00.h5  SCWT4IWH86_2023-11-01_15-03-00.h5  monad-telem.h5  monad.yaml
src/astra/frontend/: GraphingView.py  alarm_view.py  graphing_view.py  main.py  model.py  startup_screen.py  tag_searcher.py  telemetry_view.py  timerange_input.py  view.py  view_draw_functions.py  view_model.py
src/astra/usecase/: alarm_checker.py  alarm_handler.py  alarm_strategies.py  alarms_request_receiver.py  dashboard_handler.py  dashboard_request_receiver.py  data_handler.py  filters.py  front_end_request_receiver.py  utils.py  (+6 more)
tests/: test_use_case_handlers.py
tests/data/: test_datatable.py
tests/database/: test_db.py
tests/usecase/: astra.db  test_alarm_strategies.py  test_use_case_handlers.py
(+9 files in other folders)
